# manga-translator-plugin

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: COMPONENT-SPECS.md  IMPLEMENTATION-PLAN.md  PRODUCT-SPEC.md  RESEARCH.md  TECHNICAL-ARCHITECTURE.md  UI-DESIGN.md
manga_translator/: __init__.py  __main__.py  batch_processor.py  cross_page_context.py  error_recovery.py  export_manager.py  input_validator.py  manga_translator.py  ocr_cache.py  perf_monitor.py  project_manager.py  quality_control.py  region_mask.py  translation_context.py  translation_memory.py  workflow.py
manga_translator/components/: bubble_classifier.py  bubble_detector.py  font_matcher.py  inpainter.py  neural_inpainter.py  ocr_engine.py  reading_order.py  sfx_detector.py  text_region_filter.py  translator.py  typesetter.py
manga_translator/config/: settings.py  unified_config.py
manga_translator/core/: image_processor.py  layer_manager.py  plugin_manager.py
manga_translator/tests/: conftest.py  test_batch_processor.py  test_bubble_classifier.py  test_bubble_detector.py  test_check_command.py  test_cli_logging.py  test_cross_page_context.py  test_error_isolation.py  test_error_recovery.py  test_export_manager.py  test_font_matcher.py  test_image_processor.py  test_inpainter.py  test_inpainting_quality.py  test_input_validator.py  test_integration.py  test_layer_manager.py  test_neural_inpainter.py  test_ocr_cache.py  test_ocr_engine.py  test_perf_monitor.py  test_pipeline.py  test_pipeline_wiring.py  test_progress.py  test_project_manager.py  test_quality_control.py  test_reading_order.py  test_region_mask.py  test_settings.py  test_sfx_detector.py  test_text_region_filter.py  test_translation_context.py  test_translation_memory.py  test_translator.py  test_typesetter.py  test_unified_config.py  test_workflow.py
manga_translator/ui/: dialogs.py  progress.py
